Preparação do índice

--- a/index.html
+++ b/index.html
@@ -4,3 +4,12 @@
 
 layout: home
 ---
+
+<div class="catalogue-item">
+  <h1 class="catalogue-title">Teste 1</h1>
+  <div class="catalogue-line"></div>
+
+  <p>
+    Teste 2
+  </p>
+</div>
