--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Teste 1</h1>
+  <h1 class="catalogue-title">Edição de 2019/2</h1>
   <div class="catalogue-line"></div>
 
   <p>
-    Teste 2
+    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>. As inscrições para a edição de 2019/2 estão
+    abertas, e podem
+    ser realizadas por meio <a href="https://forms.gle/Q5p3go87kkW94Ehr6">deste formulário</a>.
+
+    <dl>
+      <dt>
+        Quando?
+      </dt>
+      <dd>
+        Segundas-feiras das 08h30min às 11h00min, iniciando no dia 11/11/19.
+      </dd>
+
+      <dt>
+        Onde?
+      </dt>
+      <dd>
+        Câmpus da UFMS, Nova Andradina, laboratório 2.
+      </dd>
+
+
+      <dt>
+        Por quê?
+      </dt>
+      <dd>
+        Veja um pouco mais sobre o projeto em <a href="{{ '/sobre' | prepend: site.baseurl }}/">Sobre</a>.
+      </dd>
+    </dl>
   </p>
 </div>
