Novos posts. Novo balao!

--- a/sobre.html
+++ b/sobre.html
@@ -19,9 +19,9 @@ permalink: /sobre/
 <h2>Equipe</h2>
 
 <ul>
-  <li>profº Me. Afrânio Furtado de Oliveira Neto</li>
-  <li>profº Me. Renato de Souza Garcia</li>
-  <li>profº Dr. Lucas Hermann Negri</li>
+  <li>Profº Me. Afrânio Furtado de Oliveira Neto</li>
+  <li>Profº Me. Renato de Souza Garcia</li>
+  <li>Profº Dr. Lucas Hermann Negri</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
 
