Adicionar artigo sobre mapas

--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@ permalink: /sobre/
 
 <ul>
   <li>Profº Me. Afrânio Furtado de Oliveira Neto</li>
-  <li>Profº Me. Renato de Souza Garcia</li>
+  <li>Profº Esp. Renato de Souza Garcia</li>
   <li>Profº Dr. Lucas Hermann Negri</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
