Atualizar a equipe e a edição atual

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2019/2</h1>
+  <h1 class="catalogue-title">Edição de 2020/1</h1>
   <div class="catalogue-line"></div>
 
   <p>
-    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>. As inscrições para a edição de 2019/2 estão
-    abertas, e podem
-    ser realizadas por meio <a href="https://forms.gle/Q5p3go87kkW94Ehr6">deste formulário</a>.
+    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>. As inscrições para a edição de 2020/1 estão abertas, e podem ser realizadas por meio <a href="https://forms.gle/yFHgwLwpgjATnGiE7">deste formulário</a>.
 
     <dl>
       <dt>
         Quando?
       </dt>
       <dd>
-        Segundas-feiras das 08h30min às 11h00min, iniciando no dia 11/11/19.
+        Terças-feiras das 07h45min às 10h10min, iniciando no dia 03/03/20.
       </dd>
 
       <dt>
