--- a/sobre.html
+++ b/sobre.html
@@ -20,8 +20,10 @@ permalink: /sobre/
 
 <ul>
   <li>Profº Me. Afrânio Furtado de Oliveira Neto</li>
-  <li>Profº Esp. Renato de Souza Garcia</li>
+  <li>Profº Esp. Eric Maciel Cardoso</li>
+  <li>Profº Me. Jemison dos Santos</li>
   <li>Profº Dr. Lucas Hermann Negri</li>
+  <li>Profº Esp. Renato de Souza Garcia</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
 
