Atenção para o Covid-19

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: home
       </dt>
       <dd>
         Terças-feiras das 07h00min às 10h10min, iniciando no dia 03/03/20.
+	<p><strong>Atenção: atividades suspensas devido ao Covid-19</strong></p>
       </dd>
 
       <dt>
