--- a/estudo.html
+++ b/estudo.html
@@ -4,6 +4,11 @@ title: Tópicos para estudo
 permalink: /estudo/
 ---
 
+<h2>Artigos</h2>
+
+<p>Os artigos estão ordenados por título. Para iniciantes, recomendo começar pelo artigo <em>Olá, Mundo!</em> e, na sequência,
+  estudar o artigo <em>Entrada e saída de dados</em>.</p>
+
 <ul>
 
   {% if site.categories.estudo %}
@@ -17,4 +22,11 @@ permalink: /estudo/
   {% endfor %}
   {% endif %}
 
+</ul>
+
+<h2>Videoaulas</h2>
+
+<ul>
+  <li><a href="https://youtu.be/uTyNc23JGoE">Introdução a OBI com JavaScript</a></li>
+  <li><a href="https://youtu.be/uTyNc23JGoE">Introdução a OBI com Java</a></li>
 </ul>
