--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@ layout: home
   <div class="catalogue-line"></div>
 
   <p>
-    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>. As inscrições para a edição de 2020/1 estão abertas, e podem ser realizadas por meio <a href="https://forms.gle/yFHgwLwpgjATnGiE7">deste formulário</a>.
+    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>.
 
     <dl>
       <dt>
-        Quando?
+        Como participar do treinamento?
       </dt>
       <dd>
-        Terças-feiras das 07h00min às 10h10min, iniciando no dia 03/03/20.
+        Devido à pandemia, o treinamento está sendo realizado remotamente. Para participar, entre em contato com um dos <a href="{{ '/sobre' | prepend: site.baseurl }}/">organizadores</a>.
       </dd>
-
-      <dt>
-        Onde?
-      </dt>
-      <dd>
-        Câmpus da UFMS, Nova Andradina, laboratório 2.
-      </dd>
-
 
       <dt>
         Por quê?
       </dt>
       <dd>
         Veja um pouco mais sobre o projeto em <a href="{{ '/sobre' | prepend: site.baseurl }}/">Sobre</a>.
+      </dd>
+
+      <dt>
+        Datas importantes - Olimpíada Brasileira de Informática
+      </dt>
+      <dd>
+        <ul>
+          <li>15/06/2020 - Fase 1</li>
+          <li>17/08/2020 - Fase 2</li>
+          <li>03/10/2020 - Fase 3</li>
+        </ul>
       </dd>
     </dl>
   </p>
