--- a/sobre.html
+++ b/sobre.html
@@ -19,10 +19,9 @@ permalink: /sobre/
 <h2>Equipe</h2>
 
 <ul>
-  <li>Profº Me. Afrânio Furtado de Oliveira Neto</li>
-  <li>Profº Me. Jemison dos Santos</li>
-  <li>Profº Dr. Lucas Hermann Negri</li>
-  <li>Profº Esp. Renato de Souza Garcia</li>
+  <li>Prof. Me. Afrânio Furtado de Oliveira Neto</li>
+  <li>Prof. Dr. Lucas Hermann Negri</li>
+  <li>Prof. Esp. Renato de Souza Garcia</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
 
