Adicionar videoaula com Java

--- a/estudo.html
+++ b/estudo.html
@@ -28,5 +28,5 @@ permalink: /estudo/
 
 <ul>
   <li><a href="https://youtu.be/uTyNc23JGoE">Introdução a OBI com JavaScript</a></li>
-  <li><a href="https://youtu.be/uTyNc23JGoE">Introdução a OBI com Java</a></li>
+  <li><a href="https://youtu.be/zL7qAJoUgMw">Introdução a OBI com Java</a></li>
 </ul>
