Atualização da página

--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@ permalink: /sobre/
 </h1>
 
 <p>O projeto de ensino <strong>Desafio de Programação</strong>, realizado no Instituto Federal de Mato Grosso do Sul,
-  câmpus Nova Andradina, tem como objetivo treinar estudantes no desenvolvimento de <em>algoritmos</em> e estruturas de
+  campus Nova Andradina, tem como objetivo treinar estudantes no desenvolvimento de <em>algoritmos</em> e estruturas de
   dados e incentivar a participação destes em competições de programação, como a <em>Maratona de Programação</em> e a
   <em>Olimpíada Brasileira de Informática</em>.</p>
 
