--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2020/1</h1>
+  <h1 class="catalogue-title">Edição de 2021/1</h1>
   <div class="catalogue-line"></div>
 
   <p>
@@ -25,13 +25,13 @@ layout: home
       </dd>
 
       <dt>
-        Datas importantes - Olimpíada Brasileira de Informática
+        Datas importantes - Olimpíada Brasileira de Informática 2021
       </dt>
       <dd>
         <ul>
-          <li>15/06/2020 - Fase 1</li>
-          <li>17/08/2020 - Fase 2</li>
-          <li>03/10/2020 - Fase 3</li>
+          <li>??? - Fase 1</li>
+          <li>??? - Fase 2</li>
+          <li>??? - Fase 3</li>
         </ul>
       </dd>
     </dl>
