Adicionar datas da OBI 2021

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@ layout: home
       </dd>
 
       <dt>
-        Datas importantes - Olimpíada Brasileira de Informática 2021
+        Datas importantes - Olimpíada Brasileira de Informática 2021 (modalidade programação)
       </dt>
       <dd>
         <ul>
-          <li>??? - Fase 1</li>
-          <li>??? - Fase 2</li>
-          <li>??? - Fase 3</li>
+          <li>Fase 1 - 14/06 a 16/06</li>
+          <li>Fase 2 - 21/08</li>
+          <li>Fase 3 - 25/09</li>
         </ul>
       </dd>
     </dl>
+    <p>Para mais detalhes sobre a prova, visite o calendário completo - <a href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">https://olimpiada.ic.unicamp.br/calendario/obi_completo</a></p>
   </p>
 </div>
