--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ layout: home
         </ul>
       </dd>
     </dl>
-    <p>Para mais detalhes sobre a prova, visite o calendário completo - <a href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">https://olimpiada.ic.unicamp.br/calendario/obi_completo</a></p>
+    <p>Para mais detalhes sobre a prova, visite o <a href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">calendário completo</a>.</p>
   </p>
 </div>
