Ajuste de membros e material de estudo

--- a/estudo.html
+++ b/estudo.html
@@ -4,10 +4,18 @@ title: Tópicos para estudo
 permalink: /estudo/
 ---
 
-<h2>Artigos</h2>
+<h2>Videoaulas</h2>
+
+<ul>
+  <li>Introdução à OBI com <a href="https://youtu.be/5LnX08cgCb0">JavaScript</a> e <a href="https://youtu.be/zL7qAJoUgMw">Java</a></li>
+  <li><a href="https://youtu.be/AOSTB2-Bru8">Correção da 1ª fase de 2021 (P2)</a></li>
+</ul>
+
+<h2>Artigos - Java</h2>
 
 <p>Os artigos estão ordenados por título. Para iniciantes, recomendo começar pelo artigo <em>Olá, Mundo!</em> e, na sequência,
-  estudar o artigo <em>Entrada e saída de dados</em>.</p>
+  estudar o artigo <em>Entrada e saída de dados</em>.Os exemplos de código foram feitos com a linguagem Java, mas os conceitos se aplicam
+  para outras linguagens, como Python e JavaScript.</p>
 
 <ul>
 
@@ -22,11 +30,4 @@ permalink: /estudo/
   {% endfor %}
   {% endif %}
 
-</ul>
-
-<h2>Videoaulas</h2>
-
-<ul>
-  <li><a href="https://youtu.be/uTyNc23JGoE">Introdução a OBI com JavaScript</a></li>
-  <li><a href="https://youtu.be/zL7qAJoUgMw">Introdução a OBI com Java</a></li>
 </ul>
