--- a/sobre.html
+++ b/sobre.html
@@ -21,7 +21,7 @@ permalink: /sobre/
 <ul>
   <li>Prof. Me. Afrânio Furtado de Oliveira Neto</li>
   <li>Prof. Dr. Lucas Hermann Negri</li>
-  <li>Prof. Esp. Renato de Souza Garcia</li>
+  <li>Prof. Dr. Rodrigo Duran</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
 
