--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: home
       </dt>
       <dd>
         <ul>
-          <li>Fase 1 - 14/06 a 16/06</li>
+          <li><del>Fase 1 - 15/06 a 17/06</del></li>
           <li>Fase 2 - 21/08</li>
           <li>Fase 3 - 25/09</li>
         </ul>
