Remover "novos posts" da página inicial e adicionar treinamento sobre grafos nos estudos

--- a/estudo.html
+++ b/estudo.html
@@ -8,7 +8,9 @@ permalink: /estudo/
 
 <ul>
   <li>Introdução à OBI com <a href="https://youtu.be/5LnX08cgCb0">JavaScript</a> e <a href="https://youtu.be/zL7qAJoUgMw">Java</a></li>
-  <li><a href="https://youtu.be/AOSTB2-Bru8">Correção da 1ª fase de 2021 (P2)</a></li>
+  <li><a href="https://youtu.be/AOSTB2-Bru8">Resolução da 1ª fase de 2021 (P2)</a></li>
+  <li><a href="https://youtu.be/TYGSyjKZGLA">Introdução a grafos</a> - <a href="{% link /assets/aux/grafos.pdf %}">Notas de aula</a></li>
+  <li><a href="https://youtu.be/-aFiKmiUE7c">Resolução do problema Duende (Python, OBI 2005)</a></li>
 </ul>
 
 <h2>Artigos - Java</h2>
