Atualizar resultados de 2021 e informações para estudo

--- a/index.html
+++ b/index.html
@@ -3,38 +3,42 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2021/1</h1>
+  <h1 class="catalogue-title">Edição de 2022</h1>
   <div class="catalogue-line"></div>
 
   <p>
     Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>.
 
-    <dl>
-      <dt>
-        Como participar do treinamento?
-      </dt>
-      <dd>
-        Devido à pandemia, o treinamento está sendo realizado remotamente. Para participar, entre em contato com um dos <a href="{{ '/sobre' | prepend: site.baseurl }}/">organizadores</a>.
-      </dd>
+  <dl>
+    <dt>
+      Como participar do treinamento?
+    </dt>
+    <dd>
+      Neste ano, o treinamento básico será realizado com todos os estudantes em horário de aula. Quem se interessar e
+      quiser competir
+      poderá participar do grupo e realizar o restante do treinamento de forma híbrida.
+    </dd>
 
-      <dt>
-        Por quê?
-      </dt>
-      <dd>
-        Veja um pouco mais sobre o projeto em <a href="{{ '/sobre' | prepend: site.baseurl }}/">Sobre</a>.
-      </dd>
+    <dt>
+      Por quê?
+    </dt>
+    <dd>
+      Veja um pouco mais sobre o projeto em <a href="{{ '/sobre' | prepend: site.baseurl }}/">Sobre</a>.
+    </dd>
 
-      <dt>
-        Datas importantes - Olimpíada Brasileira de Informática 2021 (modalidade programação)
-      </dt>
-      <dd>
-        <ul>
-          <li><del>Fase 1 - 15/06 a 17/06</del></li>
-          <li>Fase 2 - 21/08</li>
-          <li>Fase 3 - 25/09</li>
-        </ul>
-      </dd>
-    </dl>
-    <p>Para mais detalhes sobre a prova, visite o <a href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">calendário completo</a>.</p>
+    <dt>
+      Datas importantes - Olimpíada Brasileira de Informática 2022 (modalidade programação)
+    </dt>
+    <dd>
+      <ul>
+        <li>Inscrições - De 14/03 até 11/06</li>
+        <li>Fase 1 - 13/06 a 15/06</li>
+        <li>Fase 2 - 23/08</li>
+        <li>Fase 3 - 01/10</li>
+      </ul>
+    </dd>
+  </dl>
+  <p>Para mais detalhes sobre a prova, visite o <a
+      href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">calendário completo</a>.</p>
   </p>
 </div>
