--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,8 @@ permalink: /sobre/
 <p>O projeto de ensino <strong>Desafio de Programação</strong>, realizado no Instituto Federal de Mato Grosso do Sul,
   campus Nova Andradina, tem como objetivo treinar estudantes no desenvolvimento de <em>algoritmos</em> e estruturas de
   dados e incentivar a participação destes em competições de programação, como a <em>Maratona de Programação</em> e a
-  <em>Olimpíada Brasileira de Informática</em>.</p>
+  <em>Olimpíada Brasileira de Informática</em>.
+</p>
 
 <p>Estudantes de qualquer curso do IFMS, câmpus Nova Andradina, podem participar. Para isto, basta procurar algum membro
   da equipe ou realizar a inscrição neste sítio.</p>
@@ -19,9 +20,9 @@ permalink: /sobre/
 <h2>Equipe</h2>
 
 <ul>
-  <li>Prof. Me. Afrânio Furtado de Oliveira Neto</li>
   <li>Prof. Dr. Lucas Hermann Negri</li>
   <li>Prof. Dr. Rodrigo Duran</li>
+  <li>Prof. Esp. Renato Garcia</li>
   <li>Drª. Yujuan Wang</li>
 </ul>
 
@@ -30,8 +31,8 @@ Contato: <em>lucas.negri@ifms.edu.br</em>
 <h2>Endereços relevantes</h2>
 
 <ul>
-  <li><a href="http://maratona.ime.usp.br/">Maratona de Programação - IME-USP</a></li>
   <li><a href="https://olimpiada.ic.unicamp.br/">Olimpíada Brasileira de Informática</a></li>
+  <li><a href="http://maratona.ime.usp.br/">Maratona de Programação - IME-USP</a></li>
   <li><a href="https://br.spoj.com/">SPOJ Brasil</a></li>
   <li><a href="https://www.urionlinejudge.com.br/">URI Online Judge</a></li>
 </ul>
