--- a/estudo.html
+++ b/estudo.html
@@ -4,6 +4,13 @@ title: Tópicos para estudo
 permalink: /estudo/
 ---
 
+<h2>Material oficial</h2>
+
+<ul>
+  <li><a href="https://olimpiada.ic.unicamp.br/saci/cursos/intro_js/">Curso de Introdução à Programação de Computadores</a></li>
+  <li><a href="https://olimpiada.ic.unicamp.br/pratique">Problemas passados para prática</a></li>
+</ul>
+
 <h2>Videoaulas</h2>
 
 <ul>
