--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2022</h1>
+  <h1 class="catalogue-title">Edição de 2023</h1>
   <div class="catalogue-line"></div>
 
   <p>
@@ -14,9 +14,7 @@ layout: home
       Como participar do treinamento?
     </dt>
     <dd>
-      Neste ano, o treinamento básico será realizado com todos os estudantes em horário de aula. Quem se interessar e
-      quiser competir
-      poderá participar do grupo e realizar o restante do treinamento de forma híbrida.
+      Neste ano, o treinamento básico será realizado nas quartas-feiras de manhã das 07h00min às 10h30min (Lab 02 UFMS) com os estudantes interessados. Participe!
     </dd>
 
     <dt>
@@ -27,14 +25,14 @@ layout: home
     </dd>
 
     <dt>
-      Datas importantes - Olimpíada Brasileira de Informática 2022 (modalidade programação)
+      Datas importantes - Olimpíada Brasileira de Informática 2023 (modalidade programação)
     </dt>
     <dd>
       <ul>
-        <li>Inscrições - De 14/03 até 11/06</li>
-        <li>Fase 1 - 13/06 a 15/06</li>
-        <li>Fase 2 - 23/08</li>
-        <li>Fase 3 - 01/10</li>
+        <li>Inscrições - De 28/03 até 31/05</li>
+        <li>Fase 1 - 01/06</li>
+        <li>Fase 2 - 15/08</li>
+        <li>Fase 3 - 30/09</li>
       </ul>
     </dd>
   </dl>
