--- a/estudo.html
+++ b/estudo.html
@@ -7,8 +7,8 @@ permalink: /estudo/
 <h2>Material oficial</h2>
 
 <ul>
-  <li><a href="https://olimpiada.ic.unicamp.br/saci/cursos/intro_js/">Curso de Introdução à Programação de Computadores</a></li>
-  <li><a href="https://olimpiada.ic.unicamp.br/pratique">Problemas passados para prática</a></li>
+  <li><a href="https://olimpiada.ic.unicamp.br/saci/cursos/python/">Curso de Introdução à Programação de Computadores com Blockly e Python</a></li>
+  <li><a href="https://olimpiada.ic.unicamp.br/pratique">Problemas passados da OBI para prática</a></li>
 </ul>
 
 <h2>Videoaulas</h2>
