--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2023</h1>
+  <h1 class="catalogue-title">Edição de 2024</h1>
   <div class="catalogue-line"></div>
 
   <p>
-    Seja bem-vindo(a) ao sítio do <strong>Desafio de Programação</strong>.
+    Seja bem-vindo(a) ao sítio do <strong>Clube do Código</strong>.
 
   <dl>
     <dt>
       Como participar do treinamento?
     </dt>
     <dd>
-      Neste ano, o treinamento básico será realizado nas quartas-feiras de manhã das 07h00min às 10h30min (Lab 02 UFMS) com os estudantes interessados. Participe!
+      Neste ano, o treinamento básico será realizado nas sextas-feiras de tarde das 13h00min às 14h15min (Lab 01) com os estudantes interessados. Participe!
     </dd>
 
     <dt>
@@ -25,18 +25,18 @@ layout: home
     </dd>
 
     <dt>
-      Datas importantes - Olimpíada Brasileira de Informática 2023 (modalidade programação)
+      Datas importantes - Olimpíada Brasileira de Informática 2024 (modalidade programação)
     </dt>
     <dd>
       <ul>
-        <li>Inscrições - De 28/03 até 31/05</li>
-        <li>Fase 1 - 01/06</li>
-        <li>Fase 2 - 15/08</li>
-        <li>Fase 3 - 30/09</li>
+        <li>Inscrições - até 03/06</li>
+        <li>Fase 1 - 04 a 06/06</li>
+        <li>Fase 2 - 16/08 </li>
+        <li>Fase 3 - 28/09</li>
       </ul>
     </dd>
   </dl>
-  <p>Para mais detalhes sobre a prova, visite o <a
-      href="https://olimpiada.ic.unicamp.br/calendario/obi_completo">calendário completo</a>.</p>
+  <p>Para mais detalhes sobre a prova, visite as <a
+      href="https://olimpiada.ic.unicamp.br/calendario/datas_importantes">datas importantes</a>.</p>
   </p>
 </div>
