--- a/sobre.html
+++ b/sobre.html
@@ -5,27 +5,27 @@ permalink: /sobre/
 ---
 
 <h1>
-  Desafio de Programação
+  Clube do Código
 </h1>
 
-<p>O projeto de ensino <strong>Desafio de Programação</strong>, realizado no Instituto Federal de Mato Grosso do Sul,
-  campus Nova Andradina, tem como objetivo treinar estudantes no desenvolvimento de <em>algoritmos</em> e estruturas de
+<p>O projeto de ensino <strong>Clube do Código</strong> (antigo Desafio de Programação), realizado no Instituto Federal de Mato Grosso do Sul,
+  campus Jardim, tem como objetivo treinar estudantes no desenvolvimento de <em>algoritmos</em> e estruturas de
   dados e incentivar a participação destes em competições de programação, como a <em>Maratona de Programação</em> e a
   <em>Olimpíada Brasileira de Informática</em>.
 </p>
 
-<p>Estudantes de qualquer curso do IFMS, câmpus Nova Andradina, podem participar. Para isto, basta procurar algum membro
-  da equipe ou realizar a inscrição neste sítio.</p>
+<p>Estudantes de qualquer curso do IFMS, câmpus Jardim, podem participar. Para isto, basta procurar algum membro
+  da equipe.</p>
 
 <h2>Equipe</h2>
 
 <ul>
   <li>Prof. Dr. Lucas Hermann Negri</li>
-  <li>Prof. Dr. Rodrigo Duran</li>
-  <li>Drª. Yujuan Wang</li>
+  <li>Profª. Drª. Yujuan Wang</li>
+  <li>Prof. Dr. Patrik Bressan</li>
 </ul>
 
-Contato: <em>lucas.negri@ifms.edu.br</em>
+Contato: <em>yujuan.wang@ifms.edu.br</em> ou <em>lucas.negri@ifms.edu.br</em> .
 
 <h2>Endereços relevantes</h2>
 
