--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 ---
 
 <div class="catalogue-item">
-  <h1 class="catalogue-title">Edição de 2024</h1>
+  <h1 class="catalogue-title">Edição de 2025</h1>
   <div class="catalogue-line"></div>
 
   <p>
@@ -14,7 +14,7 @@ layout: home
       Como participar do treinamento?
     </dt>
     <dd>
-      Neste ano, o treinamento básico será realizado nas sextas-feiras de tarde das 13h00min às 14h15min (Lab 01) com os estudantes interessados. Participe!
+      Neste ano, o treinamento básico será realizado nas quartas-feiras de tarde das 14h30min às 16h15min (Lab 02) com os estudantes interessados. Participe!
     </dd>
 
     <dt>
@@ -25,14 +25,14 @@ layout: home
     </dd>
 
     <dt>
-      Datas importantes - Olimpíada Brasileira de Informática 2024 (modalidade programação)
+      Datas importantes - Olimpíada Brasileira de Informática 2025 (modalidade programação)
     </dt>
     <dd>
       <ul>
-        <li>Inscrições - até 03/06</li>
-        <li>Fase 1 - 04 a 06/06</li>
-        <li>Fase 2 - 16/08 </li>
-        <li>Fase 3 - 28/09</li>
+        <li>Inscrições - até 10/06 às 17h00min</li>
+        <li>Fase 1 - 12 a 14/06</li>
+        <li>Fase 2 - 15/08</li>
+        <li>Fase 3 - 27/09</li>
       </ul>
     </dd>
   </dl>
